--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 
           #hh {
             background-color: lightgrey;
-            color: white;
+            color: black;
             text-align: center;
             padding: 42.5px;
             margin-bottom: 0px;
@@ -30,6 +30,7 @@
             background-image: url("../images/breakfast.jpg");
             color: white;
             padding: 95px;
+            font-style: italic;
           }
 
           #lh {
@@ -37,6 +38,7 @@
             background-image: url("../images/assets/foodtop/dinner2.jpg");
             color: white;
             padding: 95px;
+            font-style: italic;
           }
 
           #dr {
@@ -44,6 +46,7 @@
             background-image: url("../images/assets/foodtop/dinner.jpg");
             color: white;
             padding: 95px;
+            font-style: italic;
           }
 
           .col-md-3 {
@@ -75,17 +78,19 @@
             padding: 12px 20px 12px 20px;
             margin: 20px;
             margin-left: 0px;
+            margin-bottom: 70px;
           }
 
           .bg {
             background-image: url("../images/assets/backgrounds/foodsBg.jpg");
-            height: 599px;
+            height: 500px;
             background-size: cover;
+            padding-top: 5px;
           }
 
           .myfirst {
             background-color: white;
-            height: 400px;
+            height: 350px;
             /*padding: 50px 0 50px 0;*/
             text-align: center;
             margin: 50px;
@@ -110,7 +115,7 @@
             margin: 0;
           }
 
-          h5 {
+          h6 {
             color: red;
             margin: 0px;
             padding: 5% 0 5% 0;
@@ -124,3 +129,39 @@
             background-color: white;
             cursor: pointer;
           }
+
+          .part5 {
+            background-color: white;
+            height: 300px;
+          }
+
+          .part5a {
+            text-align: center;
+            margin: 5%;
+            box-shadow: rgba(83, 42, 86, 0.28) 0px 1px 10px;
+            padding-bottom: 40px;
+            padding-top: 40px;
+          }
+
+          #hc {
+            color: red;
+          }
+
+          #am {
+            color: red;
+          }
+
+          .part6 {
+            background-image: url("../images/assets/backgrounds/subscribe.jpg");
+            height: 301px;
+            background-color: #F15A29;
+          }
+
+          #gdt {
+            text-align: center;
+            color: white;
+            padding-top: 70px;
+          }
+          /*.part6b {
+            background-color: #F15A29;
+          }*/
