--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,16 @@
-          .header {
+          .part1header {
             text-align: center;
             background-image: url("../images/landing.jpg");
             padding-bottom: 150px;
             padding-top: 80px;
+            font-size: 20px;
           }
 
           p {
             color: white;
           }
 
-          #hh {
+          #part2hh {
             background-color: lightgrey;
             color: black;
             text-align: center;
@@ -84,7 +85,7 @@
           .bg {
             background-image: url("../images/assets/backgrounds/foodsBg.jpg");
             height: 500px;
-            background-size: cover;
+            /*background-size: cover;*/
             padding-top: 5px;
           }
 
@@ -95,11 +96,11 @@
             text-align: center;
             margin: 50px;
           }
-
+          /*
           .myfirst .col-md-3 {
             padding: 0;
             margin: 0px;
-          }
+          }*/
 
           .active {
             color: red;
@@ -162,6 +163,27 @@
             color: white;
             padding-top: 70px;
           }
-          /*.part6b {
+
+          .part6b {
             background-color: #F15A29;
-          }*/
+            height: 301px;
+          }
+
+          #frm {
+            text-align: center;
+          }
+
+          #mn {
+            text-align: center;
+            padding-top: 20px;
+          }
+
+          #wht {
+            text-align: center;
+          }
+
+          .part6b .container {
+            text-align: center;
+          }
+
+          @media screen and (min-width: 480px) {}
